Updated width of reviews__data to fix name and date spacing issue for new comment

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -436,6 +436,7 @@
         display: flex;
         flex-direction: column;
         margin: 1rem 0;
+        width: 100%;
     }
 
     &__id {
